added all images inside images folder

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vote for Kurt van Kuller!</title>
-    <link rel="icon" href="./kvkfavicon.png" type="image/x-icon" />
+    <link rel="icon" href="./images/kvkfavicon.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
@@ -12,7 +12,7 @@
     <!-- Essential Open Graph tags -->
 <meta property="og:title" content="Vote KVK - Kurt van Kuller for Westchester County Legislature" />
 <meta property="og:description" content="Learn more about Kurt van Kuller's campaign for Westchester County Legislator, District 7." />
-<meta property="og:image" content="https://votekvk.com/logo42425.jpg" />
+<meta property="og:image" content="https://votekvk.com/images/logo42425.jpg" />
 <meta property="og:url" content="https://votekvk.com" />
 <meta property="og:type" content="website" />
 
@@ -20,7 +20,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Vote KVK" />
 <meta name="twitter:description" content="Support Kurt van Kuller for County Legislature." />
-<meta name="twitter:image" content="https://votekvk.com/logo42425.jpg" />
+<meta name="twitter:image" content="https://votekvk.com/images/logo42425.jpg" />
 
 
 
@@ -56,38 +56,38 @@
       
 
   <div class="container mt-5 mb-5 addbgcolor">
-    <img class="img-fluid district7 mx-auto" src="./district7.jpg" alt="Map of District 7"/>
+    <img class="img-fluid district7 mx-auto" src="./images/district7.jpg" alt="Map of District 7"/>
   </div>
 
   <div class="container mt-5 mb-5">
-    <img class="img-fluid mx-auto sculti"  src="./sculti2.jpg" alt="Christine Sculti">
+    <img class="img-fluid mx-auto sculti"  src="./images/sculti2.jpg" alt="Christine Sculti">
    </div>
 
   <div class="container mt-5 mb-5">
-    <img class="img-fluid mx-auto sculti"  src="./sculti1.jpg" alt="Christine Sculti">
+    <img class="img-fluid mx-auto sculti"  src="./images/sculti1.jpg" alt="Christine Sculti">
    </div>
 
      <div class="container mt-5 mb-5">
-    <img class="img-fluid mx-auto sculti"  src="./sculti.png" alt="Christine Sculti">
+    <img class="img-fluid mx-auto sculti"  src="./images/sculti.png" alt="Christine Sculti">
    </div>
 
    <div class="container mt-5 mb-5">
-    <img class="img-fluid mx-auto toms"  src="./toms.jpg" alt="Tom S">
+    <img class="img-fluid mx-auto toms"  src="./images/toms.jpg" alt="Tom S">
    </div>
   
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto libraryphoto"  src="./ryefreereadingroom.jpeg" alt="Kurt outside Rye Free Reading Room">
+  <img class="img-fluid mx-auto libraryphoto"  src="./images/ryefreereadingroom.jpeg" alt="Kurt outside Rye Free Reading Room">
  </div>
 
   <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto libraryphoto"  src="./ryefundraiser.jpg" alt="Kurt outside Rye Free Reading Room">
+  <img class="img-fluid mx-auto libraryphoto"  src="./images/ryefundraiser.jpg" alt="Kurt outside Rye Free Reading Room">
  </div>
 
 
   <div class="container mt-5 mb-5">
     <figure>
-  <img class="img-fluid mx-auto annamaria"  src="./scappaticci.jpg" alt="">
+  <img class="img-fluid mx-auto annamaria"  src="./images/scappaticci.jpg" alt="">
   <figcaption class="text-center">Honored to march in the Town of Harrison Memorial Day parade with Thomas Scappaticci, Republican candidate for Mayor/Supervisor, a wonderful host. </figcaption>
   </figure>
  </div>
@@ -97,7 +97,7 @@
  </div>
 <div class="container mt-5 mb-5">
   <figure>
-    <img class="img-fluid mx-auto koc" src="./koc.jpg" alt="At Most Holy Trinity Church in Mamaroneck with Knight of Columbus Craig Skolnik. ">
+    <img class="img-fluid mx-auto koc" src="./images/koc.jpg" alt="At Most Holy Trinity Church in Mamaroneck with Knight of Columbus Craig Skolnik. ">
     <figcaption class="text-center">At Most Holy Trinity Church in Mamaroneck with Knight of Columbus Craig Skolnik.</figcaption>
   </figure>
   </div>
@@ -108,15 +108,15 @@
 
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto bareburger"  src="./paulharrison.jpg" alt="Paul Harrison, manager of Bareburger in Rye">
+  <img class="img-fluid mx-auto bareburger"  src="./images/paulharrison.jpg" alt="Paul Harrison, manager of Bareburger in Rye">
  </div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto davetalking"  src="./davetalking.jpg" alt="talking with Dave Matthews in Rye">
+  <img class="img-fluid mx-auto davetalking"  src="./images/davetalking.jpg" alt="talking with Dave Matthews in Rye">
  </div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto park"  src="./friendinpark.jpg" alt="Talking in park">
+  <img class="img-fluid mx-auto park"  src="./images/friendinpark.jpg" alt="Talking in park">
  </div>
 
  <div class="container mt-5 mb-5">
@@ -133,45 +133,45 @@
 
 
 <div class="container mt-5 mb-5">
- <img class="img-fluid mx-auto station"  src="./mamostation.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
+ <img class="img-fluid mx-auto station"  src="./images/mamostation.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
 </div>
 <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto larchmont"  src="./kurttalkinglarchmont.jpg" alt="Larchmont">
+  <img class="img-fluid mx-auto larchmont"  src="./images/kurttalkinglarchmont.jpg" alt="Larchmont">
  </div>
 <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto brenda"  src="./images/brenda.JPG" alt="Brenda">
  </div>
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda"  src="./kurtspeakstocrowd.jpg" alt="Kurt speaks to crowd">
+  <img class="img-fluid mx-auto brenda"  src="./images/kurtspeakstocrowd.jpg" alt="Kurt speaks to crowd">
  </div>
 
 <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda"  src="./mamospeaking.jpg" alt="Brenda">
+  <img class="img-fluid mx-auto brenda"  src="./images/mamospeaking.jpg" alt="Brenda">
  </div>
 
 <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda"  src="./mamomeeting.jpg" alt="Brenda">
+  <img class="img-fluid mx-auto brenda"  src="./images/mamomeeting.jpg" alt="Brenda">
  </div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda elk"  src="./ElksLodgeBBQ6-14-25.jpg" alt="Brenda">
+  <img class="img-fluid mx-auto brenda elk"  src="./images/ElksLodgeBBQ6-14-25.jpg" alt="Brenda">
  </div>
 
   <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda"  src="./fireparadeguys.jpg" alt="Fireman's Parade">
+  <img class="img-fluid mx-auto brenda"  src="./images/fireparadeguys.jpg" alt="Fireman's Parade">
  </div>
 
   <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda"  src="./firemanparade2.jpg" alt="Fireman's Parade">
+  <img class="img-fluid mx-auto brenda"  src="./images/firemanparade2.jpg" alt="Fireman's Parade">
  </div>
 
  
   <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda"  src="./firemansparade.jpg" alt="Fireman's Parade">
+  <img class="img-fluid mx-auto brenda"  src="./images/firemansparade.jpg" alt="Fireman's Parade">
  </div>
 
   <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda"  src="./firemansparadelady.jpg" alt="Fireman's Parade">
+  <img class="img-fluid mx-auto brenda"  src="./images/firemansparadelady.jpg" alt="Fireman's Parade">
  </div>
 
 
@@ -186,21 +186,21 @@
 </div>
  <div class="container mt-5 mb-5">
   <figure>
-    <img class="img-fluid mx-auto hthall" src="./harrisontownhall.jpeg" alt="Harrison Town Hall">
+    <img class="img-fluid mx-auto hthall" src="./images/harrisontownhall.jpeg" alt="Harrison Town Hall">
       <figcaption class="text-center">Addressing the audience at a Harrison Town Hall for candidates Tom Scappaticci (for Mayor/Supervisor), Art Troilo, and Ray Colasacco (for Trustees).</figcaption>
   </figure>
  </div>
  <div class="container mt-5 mb-5">
-    <img class="img-fluid mx-auto hthall" src="./peterandsophia.jpg" alt=""> 
+    <img class="img-fluid mx-auto hthall" src="./images/peterandsophia.jpg" alt=""> 
  </div>
   <div class="container mt-5 mb-5">
-    <img class="img-fluid mx-auto hthall" src="./websters.jpg" alt="Webster's Groceries"> 
+    <img class="img-fluid mx-auto hthall" src="./images/websters.jpg" alt="Webster's Groceries"> 
  </div>
   <div class="container mt-5 mb-5">
     <img class="img-fluid mx-auto hthall" src="./images/carvel.jpg" alt="Officer at Carvel"> 
  </div>
   <div class="container mt-5 mb-5">
-    <img class="img-fluid mx-auto hthall" src="./kurtdiana.jpg" alt="Kurt & Diana"> 
+    <img class="img-fluid mx-auto hthall" src="./images/kurtdiana.jpg" alt="Kurt & Diana"> 
  </div>
 
 </div>
