--- a/endorsements.html
+++ b/endorsements.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vote for Kent van Kuller!</title>
-    <link rel="icon" href="./kvkfavicon.png" type="image/x-icon" />
+    <link rel="icon" href="./images/kvkfavicon.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
@@ -12,7 +12,7 @@
     <!-- Essential Open Graph tags -->
 <meta property="og:title" content="Vote KVK - Kurt van Kuller for Westchester County Legislature" />
 <meta property="og:description" content="Learn more about Kurt van Kuller's campaign for Westchester County Legislator, District 7." />
-<meta property="og:image" content="https://votekvk.com/logo42425.jpg" />
+<meta property="og:image" content="https://votekvk.com/images/logo42425.jpg" />
 <meta property="og:url" content="https://votekvk.com" />
 <meta property="og:type" content="website" />
 
@@ -50,7 +50,7 @@
 
       <div><h2 class="takesstand">A</h2></div>
       <div class="container">
-    <p><img class="img-fluid keithcunningham mx-auto" src="./keithcunningham.jpg" />Keith Cunningham, Rye City Councilman
+    <p><img class="img-fluid keithcunningham mx-auto" src="./images/keithcunningham.jpg" />Keith Cunningham, Rye City Councilman
     January 2024 - Present <br>
     
     "Kurt van Kuller is an outstanding choice to represent our District in the County Legislature. His municipal finance experience will be a real asset for all of us."
