--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vote for Kurt van Kuller!</title>
-  <link rel="icon" type="image/x-icon" href="./kvkfavicon.png" />
+  <link rel="icon" type="image/x-icon" href="./images/kvkfavicon.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
@@ -12,7 +12,7 @@
   <!-- Essential Open Graph tags -->
 <meta property="og:title" content="Vote KVK - Kurt van Kuller for Westchester County Legislature" />
 <meta property="og:description" content="Learn more about Kurt van Kuller's campaign for Westchester County Legislator, District 7." />
-<meta property="og:image" content="https://votekvk.com/logo42425.jpg" />
+<meta property="og:image" content="https://votekvk.com/images/logo42425.jpg" />
 <meta property="og:url" content="https://votekvk.com" />
 <meta property="og:type" content="website" />
 
@@ -57,7 +57,7 @@
 
   <!-- Bio Content -->
   <div class="container text-center mt-4">
-    <img  class="kvk5 img-fluid" src="./kvk5.jpg" alt="Kurt van Kuller" />
+    <img  class="kvk5 img-fluid" src="./images/kvk5.jpg" alt="Kurt van Kuller" />
   </div>
 
   <div class="container greybgexp">
@@ -65,7 +65,7 @@
   </div>
 
   <div class="container text-center mt-4">
-    <img class="kvkandmom img-fluid" src="./momdadcityhall.jpeg" alt="Kurt and mother" />
+    <img class="kvkandmom img-fluid" src="./images/momdadcityhall.jpeg" alt="Kurt and mother" />
   </div>
 
   <div class="container greybgexp">
@@ -75,7 +75,7 @@
   <div class="container greybgexp">
     <p><strong><u>Unprecedented Amount of Awards</u></strong> as a Municipal Bond analyst:</p>
     <div class="container text-center mt-4">
-    <img class="img-fluid kvkaward d-block mx-auto mt-4 kvkaward" src="./kvkaward.jpg" alt="Kurt accepting award"/>
+    <img class="img-fluid kvkaward d-block mx-auto mt-4 kvkaward" src="./images/kvkaward.jpg" alt="Kurt accepting award"/>
   </div>
     <ul>
       <li>First place 11 times in <em>Institutional Investor</em>, twice in <em>The Bond Buyer</em>, 19 times in <em>Smiths Research and Gradings</em>.</li>
@@ -91,7 +91,7 @@
 
   <div class="container greybgexp">
     <p><strong><u>Widely Recognized Public Speaker and Media Commentator</u></strong> on municipal bonds. Extensive press portfolio and published research. Regular conference organizer and chairman. LinkedIn Champion.</p>
-    <img class="img-fluid kvkaward d-block mx-auto mt-4 kvkspeaking" src="./kvkspeaking.jpg" alt="Kurt speaking"/>
+    <img class="img-fluid kvkaward d-block mx-auto mt-4 kvkspeaking" src="./images/kvkspeaking.jpg" alt="Kurt speaking"/>
   </div>
 
   <div class="container greybgexp">
