--- a/ontheissues.html
+++ b/ontheissues.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vote for Kurt van Kuller!</title>
-  <link rel="icon" type="image/x-icon" href="./kvkfavicon.png" />
+  <link rel="icon" type="image/x-icon" href="./images/kvkfavicon.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
@@ -12,7 +12,7 @@
   <!-- Essential Open Graph tags -->
 <meta property="og:title" content="Vote KVK - Kurt van Kuller for Westchester County Legislature" />
 <meta property="og:description" content="Learn more about Kurt van Kuller's campaign for Westchester County Legislator, District 7." />
-<meta property="og:image" content="https://votekvk.com/logo42425.jpg" />
+<meta property="og:image" content="https://votekvk.com/images/logo42425.jpg" />
 <meta property="og:url" content="https://votekvk.com" />
 <meta property="og:type" content="website" />
 
@@ -61,7 +61,7 @@
   </div>
   <div class="container mb-5">
     <figure>
-    <img class="img-fluid mx-auto ryecityhall"  src="./kurtcityhall.jpg" alt="Kurt in Rye City Hall">
+    <img class="img-fluid mx-auto ryecityhall"  src="./images/kurtcityhall.jpg" alt="Kurt in Rye City Hall">
     <figcaption style="font-size: 0.8rem; text-align: center;">Kurt in Rye City Hall</figcaption>
     </figure>
    </div>
@@ -114,7 +114,7 @@
     <ul>
       <li>Restore a traditional two-party system of checks and balances to the County Legislature.</li>
     </ul>
-    <img class="kvk3 img-fluid d-block mx-auto" src="./kvk3.jpg" alt="Kurt" />
+    <img class="kvk3 img-fluid d-block mx-auto" src="./images/kvk3.jpg" alt="Kurt" />
   </div>
   <footer style="text-align: center; padding: 1rem; background-color: #003366; color: white; font-size: 1.1rem;">
     Powered by <strong>KullerCode</strong>
