--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vote for Kurt van Kuller!</title>
-  <link rel="icon" href="./kvkfavicon.png" type="image/x-icon" />
+  <link rel="icon" href="./images/kvkfavicon.png" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
@@ -16,7 +16,7 @@
   <!-- Essential Open Graph tags -->
 <meta property="og:title" content="Vote KVK - Kurt van Kuller for Westchester County Legislature" />
 <meta property="og:description" content="Learn more about Kurt van Kuller's campaign for Westchester County Legislator, District 7." />
-<meta property="og:image" content="https://votekvk.com/logo42425.jpg" />
+<meta property="og:image" content="https://votekvk.com/images/logo42425.jpg" />
 <meta property="og:url" content="https://votekvk.com" />
 <meta property="og:type" content="website" />
 
@@ -54,7 +54,7 @@
   <!-- Main Banner -->
   <div class="banner">
     <h1 class="vote">Vote KVK!</h1>
-    <img class="bwpic img-fluid" src="./kvknewheadshot.jpg" alt="Kurt van Kuller" />
+    <img class="bwpic img-fluid" src="./images/kvknewheadshot.jpg" alt="Kurt van Kuller" />
     <h1 class="vote">Vote KVK!</h1>
   </div>
 
@@ -76,7 +76,7 @@
   </div>
 
   <div class="container">
-    <img class="kvk2 img-fluid rounded mb-4 mx-auto d-block" src="./palmcard.jpg" alt="Kurt speaking" />
+    <img class="kvk2 img-fluid rounded mb-4 mx-auto d-block" src="./images/palmcard.jpg" alt="Kurt speaking" />
   </div>
 
   <div class="greybg container text-center mb-5">
