--- a/videos.html
+++ b/videos.html
@@ -46,6 +46,13 @@
       </div>
     </div>
   </nav>
+ 
+<video>
+ <source 
+    src="https://lmcmedia.org/show/meet-the-candidates-2025-kurt-van-kuller-county-legislator/"
+    type="video/mp4"
+  />
+</video>
 
 </body>
 </html>
