--- a/ontheissues.html
+++ b/ontheissues.html
@@ -39,6 +39,7 @@
           <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
+          <li class="nav-item"><a class="nav-link" href="./videos.html">Videos</a></li>
           <li class="nav-item"><a class="nav-link" href="./arounddistrict7.html">Around District 7</a></li>
           <li class="nav-item"><a class="nav-link" href="./campaignsong.html">Campaign Song</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact/Volunteer</a></li>
