--- a/videos.html
+++ b/videos.html
@@ -49,7 +49,7 @@
  
 <video>
  <source 
-    src="https://lmcmedia.org/show/meet-the-candidates-2025-kurt-van-kuller-county-legislator/"
+    src="https://reflect-vod-lmctv.cablecast.tv/store-3/20000-Meet-the-Candidates-Kurt-Van-Kuller-v1/vod.mp4"
     type="video/mp4"
   />
 </video>
