--- a/videos.html
+++ b/videos.html
@@ -47,7 +47,7 @@
     </div>
   </nav>
  
-<video>
+<video controls width="600">
  <source 
     src="https://reflect-vod-lmctv.cablecast.tv/store-3/20000-Meet-the-Candidates-Kurt-Van-Kuller-v1/vod.mp4"
     type="video/mp4"
