--- a/videos.html
+++ b/videos.html
@@ -46,13 +46,13 @@
       </div>
     </div>
   </nav>
- 
+ <div style="text-align: center;">
 <video controls width="600">
  <source 
     src="https://reflect-vod-lmctv.cablecast.tv/store-3/20000-Meet-the-Candidates-Kurt-Van-Kuller-v1/vod.mp4"
     type="video/mp4"
   />
 </video>
-
+ </div>
 </body>
 </html>
