added padding top to video

--- a/videos.html
+++ b/videos.html
@@ -46,7 +46,7 @@
       </div>
     </div>
   </nav>
- <div style="text-align: center;">
+ <div style="text-align: center; padding-top: 20px;">
 <video controls width="600">
  <source 
     src="https://reflect-vod-lmctv.cablecast.tv/store-3/20000-Meet-the-Candidates-Kurt-Van-Kuller-v1/vod.mp4"
