added more pics

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -59,6 +59,9 @@
   <div class="container mt-5 mb-5 addbgcolor">
     <img class="img-fluid district7 mx-auto" src="./images/district7.jpg" alt="Map of District 7"/>
   </div>
+ <div class="container mt-5 mb-5">
+    <img class="img-fluid mx-auto sculti"  src="./images/tomschristine.jpg" alt="Christine Sculti">
+   </div>
 
   <div class="container mt-5 mb-5">
     <img class="img-fluid mx-auto sculti"  src="./images/sculti2.jpg" alt="Christine Sculti">
@@ -173,6 +176,30 @@
 
   <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto brenda"  src="./images/firemansparadelady.jpg" alt="Fireman's Parade">
+ </div>
+
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./images/mamblock3.jpg" alt="">
+ </div>
+
+  <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./images/jimkennedy.jpg" alt="">
+ </div>
+
+  <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./images/HarrySingh.jpg" alt="">
+ </div>
+
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./images/WitMLawlerSucltiScappiOKeefecropped.jpg" alt="">
+ </div>
+
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./images/WitMLawlerSucltiScappiOKeefecropped.jpg" alt="">
+ </div>
+
+  <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto brenda"  src="./images/mamoblock4.jpg" alt="">
  </div>
 
 
