--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -202,6 +202,13 @@
   <img class="img-fluid mx-auto brenda"  src="./images/mamoblock4.jpg" alt="">
  </div>
 
+  <div class="container mt-5 mb-5">
+    <figure>
+  <img class="img-fluid mx-auto brenda"  src="./images/DonnieoldschoolHaynes.jpg" alt="">
+ <figcaption>Donnie "Old School" Haynes</figcaption>
+</figure>
+</div>
+
 
 
 
