--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -216,7 +216,7 @@
  <div class="container mt-5 mb-5">
   <figure>
   <img class="img-fluid mx-auto cocmamo"  src="./images/cocmamokurt.jpg" alt="Chamber of Commerce Mamaroneck">
-    <figcaption class="text-center text-uppercase">SPEAKING TO MAMARONECK CHAMBER OF COMMERCE MEMBERS at Beach Point Club 6/5/25, before lively and enthusiastic small business owners. </figcaption>
+    <figcaption class="text-center">Speaking to Mamaroneck Chamber of Commerce members at Beach Point Club 6/5/25, before lively and enthusiastic small business owners. </figcaption>
 </figure>
 </div>
  <div class="container mt-5 mb-5">
@@ -235,8 +235,11 @@
     <img class="img-fluid mx-auto hthall" src="./images/carvel.jpg" alt="Officer at Carvel"> 
  </div>
   <div class="container mt-5 mb-5">
+    <figure>
     <img class="img-fluid mx-auto hthall" src="./images/kurtdiana.jpg" alt="Kurt & Diana"> 
- </div>
+    <figcaption>Wife, Diana</figcaption>
+    </figure>
+  </div>
 
 </div>
  </div>
