added lawn sign

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -135,6 +135,11 @@
   <img class="img-fluid mx-auto coriander"  src="./images/MamBlock5.jpg" alt="">
  </div>
 
+   <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto coriander"  src="./images/lawnsign.jpg" alt="">
+ </div>
+
+
 <div class="container mt-5 mb-5">
  <img class="img-fluid mx-auto cosmo"  src="./images/cosmo&alexpisanobros.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
 </div>
