more caption edits

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -97,23 +97,33 @@
  </div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto annamaria"  src="./images/annamaria.jpg" alt="Kurt with Anna Maria in front of Anna Maria's Wine Bar">
- </div>
+  <figure>
+  <img class="img-fluid mx-auto annamaria"  src="./images/annamaria.jpg" alt="Anna Maria in front of Anna Maria's Wine Bar in Rye">
+ <figcaption>Anna Maria in front of Anna Maria's Wine Bar in Rye</figcaption>
+</figure>
+</div>
+
 <div class="container mt-5 mb-5">
   <figure>
     <img class="img-fluid mx-auto koc" src="./images/koc.jpg" alt="At Most Holy Trinity Church in Mamaroneck with Knight of Columbus Craig Skolnik. ">
     <figcaption class="text-center">At Most Holy Trinity Church in Mamaroneck with Knight of Columbus Craig Skolnik.</figcaption>
   </figure>
   </div>
- <div class="container mt-5 mb-5">
-
-  <img class="img-fluid mx-auto"  src="./images/anantblockparty.jpg" alt="">
+ 
+  <div class="container mt-5 mb-5">
+    <figure>
+  <img class="img-fluid mx-auto"  src="./images/anantblockparty.jpg" alt="Anant Nambiar">
+ <figcaption>Anant Nambiar, my opponent</figcaption>
+</figure>
  </div>
 
 
  <div class="container mt-5 mb-5">
+  <figure>
   <img class="img-fluid mx-auto bareburger"  src="./images/paulharrison.jpg" alt="Paul Harrison, manager of Bareburger in Rye">
- </div>
+ <figcaption>Paul Harrison, manager of Bareburger, in Rye</figcaption>
+</figure>
+</div>
 
  <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto davetalking"  src="./images/davetalking.jpg" alt="talking with Dave Matthews in Rye">
@@ -192,20 +202,25 @@
  </div>
 
   <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda"  src="./images/jimkennedy.jpg" alt="">
- </div>
+    <figure>
+  <img class="img-fluid mx-auto brenda"  src="./images/jimkennedy.jpg" alt="Jim Kennedy">
+  <figcaption>Jim Kennedy</figcaption>
+</figure>
+</div>
 
   <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda"  src="./images/HarrySingh.jpg" alt="">
- </div>
+    <figure>
+  <img class="img-fluid mx-auto brenda"  src="./images/HarrySingh.jpg" alt="Harry Singh">
+ <figcaption>Harry Singh</figcaption>
+</figure>
+</div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda"  src="./images/WitMLawlerSucltiScappiOKeefecropped.jpg" alt="">
- </div>
-
- <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto brenda"  src="./images/WitMLawlerSucltiScappiOKeefecropped.jpg" alt="">
- </div>
+  <figure>
+  <img class="img-fluid mx-auto brenda"  src="./images/WitMLawlerSucltiScappiOKeefecropped.jpg" alt="Lawler, Sculti, Scappaticci, O'Keefe">
+ <figcaption>Lawler, Sculti, Scappaticci, O'Keefe</figcaption>
+</figure>
+</div>
 
   <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto brenda"  src="./images/mamoblock4.jpg" alt="">
