added more captions

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -60,29 +60,47 @@
     <img class="img-fluid district7 mx-auto" src="./images/district7.jpg" alt="Map of District 7"/>
   </div>
  <div class="container mt-5 mb-5">
+  <figure>
     <img class="img-fluid mx-auto sculti"  src="./images/tomschristine.jpg" alt="Christine Sculti">
-   </div>
+ <figcaption>Tom Scappaticci and Christine Sculti</figcaption>
+  </figure>
+  </div>
 
   <div class="container mt-5 mb-5">
+    <figure>
     <img class="img-fluid mx-auto sculti"  src="./images/sculti2.jpg" alt="Christine Sculti">
-   </div>
+   <figcaption>Christine Sculti</figcaption>
+  </figure>
+  </div>
 
   <div class="container mt-5 mb-5">
+    <figure>
     <img class="img-fluid mx-auto sculti"  src="./images/sculti1.jpg" alt="Christine Sculti">
-   </div>
+   <figcaption>Christine Sculti</figcaption>
+  </figure>
+  </div>
 
      <div class="container mt-5 mb-5">
+      <figure></figure>
     <img class="img-fluid mx-auto sculti"  src="./images/sculti.png" alt="Christine Sculti">
-   </div>
+   <figcaption>Christine Sculti</figcaption>
+  </figure>
+  </div>
 
    <div class="container mt-5 mb-5">
-    <img class="img-fluid mx-auto toms"  src="./images/toms.jpg" alt="Tom S">
-   </div>
+    <figure>
+    <img class="img-fluid mx-auto toms"  src="./images/toms.jpg" alt="Tom Scappaticci">
+   <figcaption>Tom Scappaticci</figcaption>
+  </figure>
+  </div>
   
 
  <div class="container mt-5 mb-5">
+  <figure></figure>
   <img class="img-fluid mx-auto libraryphoto"  src="./images/ryefreereadingroom.jpeg" alt="Kurt outside Rye Free Reading Room">
- </div>
+ <figcaption>Outside the Rye Free Reading Room in Rye</figcaption>
+</figure>
+</div>
 
   <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto libraryphoto"  src="./images/ryefundraiser.jpg" alt="Kurt outside Rye Free Reading Room">
