added more captions

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -144,12 +144,18 @@
 </div>
 
  <div class="container mt-5 mb-5">
+  <figure>
   <img class="img-fluid mx-auto davetalking"  src="./images/davetalking.jpg" alt="talking with Dave Matthews in Rye">
- </div>
+ <figcaption>Dave Matthews</figcaption>
+</figure>
+</div>
 
  <div class="container mt-5 mb-5">
+  <figure>
   <img class="img-fluid mx-auto park"  src="./images/friendinpark.jpg" alt="Talking in park">
- </div>
+ <figcaption>Dave Hood</figcaption>
+</figure>
+</div>
 
  <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto boiano"  src="./images/boiano.jpg" alt="Boiano Bakery">
