added debate video

--- a/videos.html
+++ b/videos.html
@@ -54,5 +54,14 @@
   />
 </video>
  </div>
+
+  <div style="text-align: center; padding-top: 20px;">
+<video controls width="600">
+ <source 
+    src="https://reflect-vod-lmctv.cablecast.tv/store-3/20029-League-of-Women-Voters-Candidate-Forum-10-22-25-v1/vod.mp4"
+    type="video/mp4"
+  />
+</video>
+ </div>
 </body>
 </html>
