added footer and JS to videos page

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -162,6 +162,37 @@
  </div>
 
  <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto boiano"  src="./images/TownHall10-15.jpeg" alt="Town Hall 10-15">
+ </div>
+
+  <div class="container mt-5 mb-5">
+    <figure>
+      <img class="img-fluid mx-auto boiano"  src="./images/FredScilianoTownHall10-15-25.jpg" alt="FredScilianoTownHall10-15-25">
+      <figcaption>Fred Sciliano, at Town Hall 10-15-25</figcaption>
+      <figure>
+</div>
+
+  <div class="container mt-5 mb-5">
+    <figure>
+      <img class="img-fluid mx-auto boiano"  src="./images/AngelaVaccaroTownHall101525.jpeg" alt="Angela Vaccaro, Town Hall, 10-15-25">
+      <figcaption>Angela Vaccaro, at Town Hall 10-15-25</figcaption>
+      <figure>
+</div>
+
+  <div class="container mt-5 mb-5">
+      <img class="img-fluid mx-auto boiano"  src="./images/hoody.jpg" alt="hoody">
+</div>
+
+  <div class="container mt-5 mb-5">
+    <figure>
+      <img class="img-fluid mx-auto boiano"  src="./images/RayCTownHall10-15-25.jpeg" alt="Ray C, Town Hall, 10-15-25">
+      <figcaption>Ray C, at Town Hall 10-15-25</figcaption>
+      <figure>
+</div>
+
+
+
+ <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto coriander"  src="./images/corainder.JPG" alt="Coriander in Larchmont">
  </div>
 
