--- a/videos.html
+++ b/videos.html
@@ -56,7 +56,7 @@
 </video>
  </div>
 
- <div style="text-align: center; padding-top: 20px;">
+ <div class="video-container" style="text-align: center; padding-top: 20px;">
 <video controls width="600">
  <source 
     src="https://reflect-vod-lmctv.cablecast.tv/store-3/20000-Meet-the-Candidates-Kurt-Van-Kuller-v1/vod.mp4"
