--- a/videos.html
+++ b/videos.html
@@ -47,8 +47,8 @@
     </div>
   </nav>
 
-  <div style="text-align: center; padding-top: 20px;">
-<video controls width="600">
+  <div class="video-container" style="text-align: center; padding-top: 20px;">
+<video controls>
  <source 
     src="https://reflect-vod-lmctv.cablecast.tv/store-3/20029-League-of-Women-Voters-Candidate-Forum-10-22-25-v1/vod.mp4"
     type="video/mp4"
@@ -57,7 +57,7 @@
  </div>
 
  <div class="video-container" style="text-align: center; padding-top: 20px;">
-<video controls width="600">
+<video controls>
  <source 
     src="https://reflect-vod-lmctv.cablecast.tv/store-3/20000-Meet-the-Candidates-Kurt-Van-Kuller-v1/vod.mp4"
     type="video/mp4"
