added margin bottom

--- a/videos.html
+++ b/videos.html
@@ -57,7 +57,7 @@
 </video>
  </div>
 
- <div class="video-container" style="text-align: center; padding-top: 20px;">
+ <div class="video-container" style="text-align: center; padding-top: 20px; margin-bottom: 20px;">
 <video controls>
  <source 
     src="https://reflect-vod-lmctv.cablecast.tv/store-3/20000-Meet-the-Candidates-Kurt-Van-Kuller-v1/vod.mp4"
